test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_parse/mismatched_subscript.plx
pub fn main(none) i32 {
    indices: [3]i32 = $(1, 2, 3)
    vals: [3]i32 = $(4, 5, 6)
    return vals[indices[1]
}
